--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
             <meta charset="utf-8">
             <title>Portafolio</title>
             <meta name="viewport" content="width=device-width, initial-scale=1.0, maximun-scale=1.0, minimun-scale=1.0, user-scalable=no">
-            <link rel="stylesheet" href="css/estilos.css">
+            <link rel="stylesheet" href="estilos.css">
             <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
