--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <header>
                 <div class="contenedor">
                     <div class="logo">
-                        <img src="img/img1.png" alt="Logo">
+                        <img src="img1.png" alt="Logo">
                     </div>
                     <nav class="menu">
                         <a href="index.html">INICIO</a>
