--- a/skills.html
+++ b/skills.html
@@ -15,7 +15,7 @@
             <header>
                 <div class="contenedor">
                     <div class="logo">
-                        <img src="img/img4.png" alt="Logo">
+                        <img src="img4.png" alt="Logo">
                     </div>
                     <nav class="menu">
                         <a href="index.html">INICIO</a>
@@ -27,35 +27,35 @@
                     <h3 class="subtitulo">Conocimientos tecnológicos</h3>
                     <div class="row">
                         <div class="icon">
-                            <img src="img/python.png">
+                            <img src="python.png">
                             <p>PYTHON</p>
                         </div>
                         <div class="icon">
-                            <img src="img/altair.png">
+                            <img src="altair.png">
                             <p>ALTAIR</p>
                         </div>
                         <div class="icon">
-                            <img src="img/pandas.png">
+                            <img src="pandas.png">
                             <p>PANDAS</p>
                         </div>
                         <div class="icon">
-                            <img src="img/colab.png">
+                            <img src="colab.png">
                             <p>GOOGLE COLAB</p>
                         </div>
                         <div class="icon">
-                            <img src="img/visual.png">
+                            <img src="visual.png">
                             <p>VISUAL STUDIO CODE</p>
                         </div>
                         <div class="icon">
-                            <img src="img/seaborn.svg">
+                            <img src="seaborn.svg">
                             <p>SEABORN</p>
                         </div>
                         <div class="icon">
-                            <img src="img/css.png">
+                            <img src="css.png">
                             <p>CSS</p>
                         </div>
                         <div class="icon">
-                            <img src="img/html.png">
+                            <img src="html.png">
                             <p>HTML</p>
                         </div>
                     </div>
