--- a/contacto.html
+++ b/contacto.html
@@ -15,7 +15,7 @@
             <header>
                 <div class="contenedor">
                     <div class="logo">
-                        <img src="img/img5.png" alt="Logo">
+                        <img src="img5.png" alt="Logo">
                     </div>
                     <nav class="menu">
                         <a href="index.html">INICIO</a>
